test/success/drops/simple_drop/main.sk
module Main {

struct Foo {
}

instance Drop[Foo] {
    fn drop(self) -> Self {
        println("Dropping Foo");
        self
    }
}


fn main() {
    let f = Foo();
}

}